correcting the alignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -188,7 +188,7 @@ position:fixed;
 bottom: 0;
 margin-top: 10px;
 }
-#listen{
+#listen button{
 border-radius: 5px;
 box-shadow: 5px 8px 20px white;
 color: white;
